--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
+  json_serializable: ^6.7.0
+  http: ^1.0.0
+  json_annotation: ^4.6.0
+  build_runner: ^2.4.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.1.2
 
 dev_dependencies:
   flutter_test:
